src/objects/CS_Asset_Contact_Permissions__c.object
<CustomObject>
    <fields>
        <fullName>CS_ACP_Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>****Service Cloud ACP Unique KEY *****</description>
        <label>ACP Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CS_Access_Type__c</fullName>
        <label>Access Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support (View Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Account_Id__c</fullName>
        <formula>CS_Contact__r.AccountId</formula>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Account__c</fullName>
        <formula>CS_Asset__r.CS_Account_Name__c</formula>
        <inlineHelpText>Account Name</inlineHelpText>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Asset_Name__c</fullName>
        <formula>CS_Asset__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Asset_Status__c</fullName>
        <formula>TEXT(CS_Asset__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>Asset_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CS_Contact_Type__c</fullName>
        <formula>CS_Contact__r.Account.RecordType.DeveloperName</formula>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Asset_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CS_Email__c</fullName>
        <formula>CS_Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Evaluation_End_Date__c</fullName>
        <description>Prospect Evaluation End Date</description>
        <label>Evaluation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_First_Name__c</fullName>
        <formula>CS_Contact__r.FirstName</formula>
        <inlineHelpText>First Name</inlineHelpText>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Last_Name__c</fullName>
        <formula>CS_Contact__r.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Office_Phone__c</fullName>
        <formula>CS_Contact__r.Phone</formula>
        <label>Office Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product_Image__c</fullName>
        <formula>IMAGE(CASE(CS_Product__c, &quot;BillingCenter&quot;, &quot;/resource/Claim_Center&quot;, 
       &quot;ClaimsCenter&quot;, &quot;/resource/Claim_Center&quot;,
       &quot;PolicyCenter&quot;, &quot;/resource/Policy_Center&quot;,
        &quot;no image&quot;), &quot;Product&quot;, 40, 45)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product__c</fullName>
        <formula>BLANKVALUE(CS_Asset__r.Product2.Product__r.Name,CS_Asset__r.Product2.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product_version__c</fullName>
        <formula>CS_Asset__r.CS_Product_Version__r.Name</formula>
        <label>Product Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Release_Version__c</fullName>
        <formula>CS_Asset__r.CS_Product_Version__r.CS_Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_ID_Formulae__c</fullName>
        <formula>IF(CS_Asset__r.CS_RightNow_ID__c != null &amp;&amp;  CS_Contact__r.CS_RightNow_ID__c != null, CS_Asset__r.CS_RightNow_ID__c + &apos;-&apos; + CS_Contact__r.CS_RightNow_ID__c , &apos;&apos;)</formula>
        <label>RightNow ID Formulae</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_ID__c</fullName>
        <externalId>true</externalId>
        <label>RightNow ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CS_Title__c</fullName>
        <formula>CS_Contact__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Asset Contact Permission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CS_Asset_Name__c</columns>
        <columns>CS_Contact__c</columns>
        <columns>CS_Product__c</columns>
        <columns>CS_Contact_Type__c</columns>
        <columns>CS_Asset_Status__c</columns>
        <columns>NAME</columns>
        <columns>CS_Asset__c</columns>
        <columns>CS_IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Partner_Certified_ACP_s</fullName>
        <columns>NAME</columns>
        <columns>CS_Account__c</columns>
        <columns>CS_Asset_Name__c</columns>
        <columns>CS_Asset_Status__c</columns>
        <columns>CS_IsActive__c</columns>
        <columns>CS_Contact_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Access_Type__c</field>
            <operation>equals</operation>
            <value>Certified</value>
        </filters>
        <label>Partner Certified ACP&apos;s</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Contact Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>